css/styles.css
/* 
=======================
Global Styles
=======================
*/

body{
    position: relative;
    display: flex;
    justify-content: center;
    align-content: center;
    min-height: 100vh;
    font-family: 'Spartan', sans-serif;
    font-size: .9375rem;
    font-weight: 500;
    background-color: hsl(0, 0%, 100%);
    color: hsl(303, 10%, 53%);
    overflow: hidden;
}

img{
    display: inline-block;
}

/* 
=======================
Fonts/Colors
=======================
*/

.info__title,
.ratings__source{
    color: hsl(300, 43%, 22%);
}

.info__title,
.ratings__source,
.buyer__info__name{
    font-weight: 700;
}

.info__text{
    font-weight: 400;
}

.info__text,
.buyer__info{
    font-size: .88rem;
}

.buyer__info__name,
.review{
   color: hsl(0, 0%, 100%);
}

.buyer__info__verified{
    font-weight: 400;
    color: hsl(333, 80%, 67%);
}

.review{
    font-size: .77rem;
}

/* 
=======================
Layout
=======================
*/

.bg-pattern{
    position: absolute;
}

.bg-pattern--top{
    top: 0;
    left: 0;
}

.bg-pattern--bottom{
    bottom: 0;
    right: 0;
}

.container{
    position: relative;
    margin: 80px 0;
    width: 85%;
    max-width: 510px;
    text-align: center;
}

.info__title{
    margin: 0 0 .7em;
}

.info__text{
    margin-bottom: 3em;
}

.info__text,
.review{
    line-height: 1.5em;
}

.ratings-container{
    margin-bottom: 3em;
}

.ratings{
    margin-bottom: 1em;
    padding: 1em 0 .2em;
    background-color: hsl(300, 24%, 96%);
}

.buyer-card{
    margin-bottom: 1em;
    padding: 2em;
    text-align: left;
    background-color: hsl(300, 43%, 22%);
}

.buyer{
    display: flex;
    align-items: center;
    margin-bottom: 2em;
}

.buyer__profilepic{
    width: 50px;
    border-radius: 50%;
}

.buyer__info__name,
.buyer__info__verified{
    margin: .25em 1em;
}

.ratings,
.buyer-card{
    border-radius: 10px;
}

@media (min-width: 1000px){

    .bg-pattern--top{
        top: -500px;
    }

    .bg-pattern--bottom{
        right: -200px;
    }

    .container{
        display: flex;
        flex-wrap: wrap;
        align-self: center;
        width: 80%;
        height: 80vh;
        margin: 0;
        max-width: none;
    }

    .info{
        width: 45%;
        height: 40%;
        margin-right: 10%;
        text-align: left;
    }

    .info__title{
        margin-bottom: .5em;
        font-size: 3rem;
    }

    .info__text{
        margin-bottom: 0;
        font-size: 1rem;
    }

    .ratings-container{
        display: flex;
        justify-self: flex-end;
        flex-direction: column;
        width: 45%;
        margin-bottom: 0;
        padding-top: 1em;
    }

    .ratings{
        width: 80%;
        padding: 0;
    }

    .ratings--two{
        align-self: center;
    }

    .ratings--three{
        align-self: flex-end;
    }

    .buyer-reviews{
        display: flex;
        justify-content: space-between;
    }

    .buyer-card{
        width: 31%;
        height: 80%;
        padding: 2.5em;
    }

    .buyer-card--two{
        align-self: center;
    }

    .buyer-card--three{
        align-self: flex-end;
    }

    .attribution{
        width: 100%;
        align-self: flex-end;
    }
}

/* 
=======================
Attribution
=======================
*/

.attribution {
    height: 15px;
    font-size: 11px;
    text-align: center;
  }
  
.attribution a {
    text-decoration: none;
    color: hsl(300, 43%, 22%);
  }

.attribution a:hover, a:focus, a:active{
    text-decoration: underline;
    outline: none;
}

